aligned timeline - hacky fix for pre-2k6 data

--- a/web/app/static/css/layout.css
+++ b/web/app/static/css/layout.css
@@ -45,7 +45,7 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
-	width: 87%;
+	width: 75%;
 }
 
 #animate_button{
